# ChangeLog for x11-base/xorg-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.623 2011/11/01 22:53:10 hwoarang Exp $

  01 Nov 2011; Markos Chandras <hwoarang@gentoo.org> files/xdm.initd-3:
  add support for lightdm. bug #389039 thanks to Tobias Wallura
  <Tobias.Wallura@gmail.com>

  22 Oct 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -xorg-server-1.9.4.ebuild, -xorg-server-1.9.5.ebuild,
  -xorg-server-1.10.2.ebuild, -xorg-server-1.10.3.ebuild,
  -xorg-server-1.10.4.ebuild, -xorg-server-1.11.0.ebuild,
  -xorg-server-1.11.1.ebuild:
  Drop vulnerable versions, bug #387069.

  22 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  xorg-server-1.9.5-r1.ebuild, xorg-server-1.10.4-r1.ebuild:
  ppc/ppc64 stable wrt #387069

  22 Oct 2011; Raúl Porcel <armin76@gentoo.org> xorg-server-1.9.5-r1.ebuild,
  xorg-server-1.10.4-r1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #387069

  22 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xorg-server-1.9.5-r1.ebuild, xorg-server-1.10.4-r1.ebuild:
  x86 stable wrt bug #387069

*xorg-server-1.11.1-r1 (18 Oct 2011)
*xorg-server-1.10.4-r1 (18 Oct 2011)
*xorg-server-1.9.5-r1 (18 Oct 2011)

  18 Oct 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.9.5-r1.ebuild, +xorg-server-1.10.4-r1.ebuild,
  +xorg-server-1.11.1-r1.ebuild, +files/xorg-cve-2011-4028+4029.patch:
  Add patch for security bug #387069.

  03 Oct 2011; Joseph Jezak <josejx@gentoo.org> xorg-server-1.10.4.ebuild:
  Marked ppc ppc64 stable for bug #380421.

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> xorg-server-1.10.4.ebuild:
  alpha/ia64/sh/sparc stable wrt #380421

  02 Oct 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-server-1.11.1.ebuild:
  Fix dmx documentation dependency.

*xorg-server-1.11.1 (01 Oct 2011)

  01 Oct 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.11.1.ebuild: