@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.623 2011/11/01 22:53:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.624 2011/11/05 12:50:15 chithanh Exp $
+
+*xorg-server-1.11.2 (05 Nov 2011)
+
+  05 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xorg-server-1.11.2.ebuild:
+  Version bump.
 
   01 Nov 2011; Markos Chandras <hwoarang@gentoo.org> files/xdm.initd-3:
   add support for lightdm. bug #389039 thanks to Tobias Wallura
